--- a/templates/search.html
+++ b/templates/search.html
@@ -71,8 +71,8 @@
     
     <h2>Student Verification Form</h2>
     <form method="POST" action="/">
-      <input type="text" name="admission_search" placeholder="Enter Admission Number" required />
-      <input type="date" name="dob_search" required />
+      <input type="text" name="admission_no" placeholder="Enter Admission Number" required />
+      <input type="date" name="dob" required />
       <button type="submit">Search</button>
     </form>
     {% if error %}
