--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,17 @@
 <input type="text" name="samagra_id">
 
 <label>Blood Group:</label>
-<input type="text" name="blood_group">
+<select id="blood_group" name="blood_group" required>
+    <option value="">-- Select Blood Group --</option>
+    <option value="A+">A+</option>
+    <option value="A-">A-</option>
+    <option value="B+">B+</option>
+    <option value="B-">B-</option>
+    <option value="O+">O+</option>
+    <option value="O-">O-</option>
+    <option value="AB+">AB+</option>
+    <option value="AB-">AB-</option>
+</select>
 
 <label>Category:</label>
 <select name="category" id="categorySelect">
